k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-gateway
  namespace: game-ops
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: game.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-gateway
                port:
                  number: 8000
